Fix masthead z-index.

--- a/css/rumble.css
+++ b/css/rumble.css
@@ -223,6 +223,7 @@ header.fixed #masthead {
   position: fixed;
   top: 0;
   background: transparent url("/images/rumble/bg-masthead.png") no-repeat 0 0;
+  z-index: 999;
 }
 
 #masthead:after {
